tdf#113400: fix crash by destroying returned unique_ptr

Regression from https://cgit.freedesktop.org/libreoffice/core/commit/?id=19910c461230f70bb9e98ad44db3525f0d755724
tdf#112658: fix leak when calling TextEngine::SetAttrib

Change-Id: I4f1edf41e11f3cdfda6071b30a84372db68cd59d